environment/blade/bookinfo/overlay/gedemo/2.2.route-multiple-upstreams/patch/bookinfo-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - bookinfo.jad.solo.io
    routes:
    - matchers:
      - prefix: /
      routeAction:
        multi:
          destinations:
          - weight: 50
            destination:
              upstream:
                name: bookinfo-productpage-9080
                namespace: gloo-system
          - weight: 50
            destination:
              upstream:
                name: bookinfo-productpage-beta-9080
                namespace: gloo-system
